--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -11,6 +11,8 @@
     --color-white: #ffffff;
     --color-black: #000000;
 
+    --color-success: #4CAF50;
+
     
     /* 
     --color-primary-dark: #10316B;
