--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -113,6 +113,10 @@
     width: 100%;
     margin-top: 2rem;
     flex-wrap: wrap;
+
+    &.center{
+      justify-content: center;
+    }
   }
 
   .listing{
