--- a/src/global.css
+++ b/src/global.css
@@ -151,6 +151,16 @@ select {
   min-height: 30px;
 }
 
+input.form-control,
+textarea.form-control {
+  border-color: white;
+  border-bottom: 3px solid var(--color-theme-primary);
+  border-radius: 0px;
+  padding: 8px 12px;
+  font-size: 1rem;
+  background-color: #f5f5f5;
+}
+
 /* headings */
 .section-heading {
   font-size: 2.6rem;
@@ -253,5 +263,30 @@ section {
   }
   .banner-text {
     width: 85%;
+  }
+}
+
+.avatar-wrapper {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  overflow: hidden;
+  border: 1px solid var(--color-theme-primary);
+  & img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+}
+
+.dropdown-menu {
+  padding: 0;
+  overflow: hidden;
+  &.show {
+    margin-top: 15px !important;
+  }
+  & .dropdown-item:hover {
+    color: var(--color-theme-primary);
+    background-color: #eee;
   }
 }
