--- a/src/global.css
+++ b/src/global.css
@@ -152,7 +152,8 @@ select {
 }
 
 input.form-control,
-textarea.form-control {
+textarea.form-control,
+.form-select {
   border-color: white;
   border-bottom: 3px solid var(--color-theme-primary);
   border-radius: 0px;
