--- a/src/pages/temple/temple.css
+++ b/src/pages/temple/temple.css
@@ -1,43 +1,57 @@
-.temple-container{
-
-    & > div > div{
-     flex: 1;
-    }
-    & > div > div:nth-of-type(2){
-        padding: 1rem;
-    }
-
-    & .temple-details{
-        display: flex;
-        flex-direction: column;
-        gap: .6rem;
-    }
-    & .img-wrapper{
-        overflow: hidden;
- 
-        
-
-        & img{
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
-    }
-
-
-}
-
-.feature{
-    padding: 4px 6px;
-    border-radius: 4px;
-    font-size: .8rem;
-    margin: .3rem .4rem .3rem 0;
-}
-
-.donation-ways{
-    flex-basis: 40%;
-}
-.temple-details{
+.temple-container {
+  & > div > div {
     flex: 1;
+  }
+  & > div > div:nth-of-type(2) {
+    padding: 1rem;
+  }
+
+  & .temple-details {
+    display: flex;
+    flex-direction: column;
+    gap: 0.6rem;
+  }
+  & .img-wrapper {
+    overflow: hidden;
+
+    & img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
+
+  & .social-media {
+    display: flex;
+
+    & div {
+      padding: 2px;
+      border-radius: 50%;
+      box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+      width: 60px;
+      height: 60px;
+      overflow: hidden;
+      background-color: #f5f5f5;
+      /* border: 1px solid var(--color-theme-primary); */
+      & img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+    }
+  }
 }
 
+.feature {
+  padding: 4px 6px;
+  border-radius: 4px;
+  font-size: 0.8rem;
+  margin: 0.3rem 0.4rem 0.3rem 0;
+}
+
+.donation-ways {
+  flex-basis: 40%;
+}
+.temple-details {
+  flex: 1;
+}
