--- a/src/components/sectionLinearBg/sectionLinearBg.css
+++ b/src/components/sectionLinearBg/sectionLinearBg.css
@@ -1,22 +1,35 @@
-.section-linear-bg{
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    position:relative;
-    &:after {
-        content: "";
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        background: linear-gradient(to right, rgba(255, 255, 255, .8), rgba(255, 255, 255, .8));
-        top: 0;
-        left: 0;
-        z-index: 1;
-            
-          }
+.section-linear-bg {
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  position: relative;
+  &:after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(
+      to right,
+      rgba(255, 255, 255, 0.8),
+      rgba(255, 255, 255, 0.8)
+    );
+    top: 0;
+    left: 0;
+    z-index: 1;
+  }
 
-         & div{
-            position: relative;
-            z-index: 2;
-          }
+  & div {
+    position: relative;
+    z-index: 2;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .section-linear-bg {
+    padding: 2rem 1rem;
+    min-height: 400px;
+    & div div {
+      width: 100% !important;
+    }
+  }
 }
