--- a/src/global.css
+++ b/src/global.css
@@ -291,3 +291,46 @@ section {
     background-color: #eee;
   }
 }
+
+@media screen and (max-width: 768px) {
+  .text-xl {
+    font-size: 1.6rem;
+  }
+  .section-heading {
+    font-size: 1.5rem;
+  }
+  .section-heading.line {
+    padding-left: 20px;
+  }
+  .section-heading .text-sm {
+    margin: 0 !important;
+  }
+
+  .styled-img-container {
+    width: 100%;
+  }
+
+  .styled-img-container {
+    height: 440px;
+  }
+
+  .styled-img-container .styled-img {
+    border-radius: 13px;
+  }
+
+  .styled-img-container .styled-img:nth-of-type(2) {
+    width: 175px;
+    height: 372px;
+  }
+  .styled-img-container .styled-img:nth-of-type(1) {
+    width: 120px;
+    height: 240px;
+    right: 190px;
+  }
+  .styled-img-container .styled-img:nth-of-type(3) {
+    width: 120px;
+    height: 120px;
+    right: 190px;
+    top: 286px;
+  }
+}
