--- a/src/pages/checkout/checkout.css
+++ b/src/pages/checkout/checkout.css
@@ -41,8 +41,10 @@
 }
 
 .form-check-input.custom-checkbox {
-  width: 30px !important;
-  height: 30px !important;
+  width: 20px !important;
+  height: 20px !important;
+  min-width: 0 !important;
+  min-height: 0 !important;
   margin-right: 10px;
   background-color: #fff;
   border: 1px solid var(--color-theme-primary);
@@ -55,11 +57,11 @@
 .form-check-input.custom-checkbox:checked::before {
   content: "✔";
   color: white;
-  width: 24px !important;
-  height: 24px !important;
+  width: 14px !important;
+  height: 14px !important;
   border: 1px solid var(--color-theme-primary) !important;
   background-color: var(--color-theme-primary) !important;
-  font-size: 20px;
+  font-size: 10px;
   position: absolute;
   top: 50%;
   left: 50%;
