added international currency support

--- a/src/pages/temple/temple.css
+++ b/src/pages/temple/temple.css
@@ -55,3 +55,12 @@
 .temple-details {
   flex: 1;
 }
+
+.section-heading-wrapper{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  .form-select{
+    padding-right: 35px;
+  }
+}
