--- a/src/pages/checkout/checkout.css
+++ b/src/pages/checkout/checkout.css
@@ -67,3 +67,11 @@
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
+.CurrencyContainer{
+  display: flex;
+  justify-content: right;
+}
+.CurrencyContainer > .currency-select > .form-select{
+  padding-right: 35px;
+}
