changed nav order, added add new temple button if no temple listed, implemented monthly donatio, shifted logout button, added loaders while temples are fetching

--- a/src/pages/temples/temples.css
+++ b/src/pages/temples/temples.css
@@ -7,3 +7,13 @@
 .sort-buttons .btn {
   flex: 1;
 }
+
+.loading-container{
+  height: 200px;
+  max-width: 100%;
+  width: 200px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: auto;
+}
