--- a/src/components/buttons/buttons.css
+++ b/src/components/buttons/buttons.css
@@ -32,6 +32,13 @@ button.btn:hover,button.btn:active{
 }
 
 
+.btn-theme-error{
+    background-color: var(--color-theme-error) !important;
+    border: 1px solid var(--color-theme-error) !important;
+    color: var(--color-white) !important;
+}
+
+
 .btn-md{
     padding: 8px 14px;
     font-size: 1rem;
