--- a/src/components/loadingSpinner/loadingSpinner.css
+++ b/src/components/loadingSpinner/loadingSpinner.css
@@ -2,4 +2,17 @@
   position: absolute;
   top: 50%;
   left: 50%;
+  transform: translate(-50%, -50%);
+}
+.loader-wrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(255, 255, 255, 0.8); /* Light white overlay */
+  z-index: 999999;
 }
