--- a/src/css/buttons.css
+++ b/src/css/buttons.css
@@ -14,6 +14,11 @@
   color: var(--color-theme-primary);
 }
 
+.btn-theme-primary i{
+  color: var(--color-white);
+  font-size: .9rem;
+}
+
 /* to all buttons */
 button,
 a.btn {
