--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -122,7 +122,7 @@
 .listing-container {
   display: flex;
   justify-content: flex-start;
-  align-items: center;
+  /* align-items: center; */
   width: 100%;
   margin-top: 2rem;
   flex-wrap: wrap;
@@ -142,7 +142,7 @@
   margin: 15px 10px;
   flex: 1;
   /* padding: 1rem; */
-  min-width: 360px;
+  /* min-width: 360px; */
   max-width: 400px;
   border: 1px solid transparent;
 
