--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -142,7 +142,7 @@
   margin: 15px 10px;
   flex: 1;
   /* padding: 1rem; */
-  /* min-width: 360px; */
+  min-width: 330px;
   max-width: 400px;
   border: 1px solid transparent;
 
