--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -76,33 +76,47 @@
 }
 
 .review-container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-  margin-top: 2rem;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr); 
+  grid-template-rows: repeat(2, 1fr); 
+  gap: 1rem;
+}
+.top{
+  grid-row: 1;
+}
+.bottom{
+  grid-row: 2;
+}
+
+.review-heading{
+  grid-column-start: 2;
+  grid-column-end: 4;
+  text-align: center;
+  font-size: 1.5rem;
+  font-weight: 500;
+  margin-bottom: 1rem;
+  height: fit-content;
 }
 
 .review,
 .review-heading {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
   border: 1px solid #ccc;
   border-radius: 8px;
   box-shadow: var(--shadow-light);
-  margin: 15px;
-  flex: 1;
   padding: 1rem;
-  min-width: 20%;
-  max-width: 400px;
+}
+.review{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
 }
 .review-heading {
   box-shadow: none;
   border: none;
   text-align: center;
   min-width: 40%;
+  margin: auto;
 }
 .review-text {
   margin-bottom: 1rem;
@@ -126,6 +140,8 @@
   font-weight: 500;
   color: var(--color-grey-light-2);
 }
+
+
 
 .listing-container {
   display: flex;
