--- a/src/components/layout/layout.css
+++ b/src/components/layout/layout.css
@@ -144,8 +144,13 @@ footer > div:nth-of-type(2n) {
     padding: 0.4rem 1rem;
   }
 
+  /* section {
+    overflow: hidden;
+  } */
+
   nav .nav-left .logo-container {
-    height: 40px;
+    /* height: 40px; */
+    width: 180px;
   }
 
   nav .nav-right .nav-item a {
