--- a/src/global.css
+++ b/src/global.css
@@ -260,14 +260,14 @@ section {
   }
 
   section {
-    padding: 1.5rem 2rem;
+    padding: 1.5rem 1rem;
   }
   section > .d-flex {
     flex-wrap: wrap;
   }
 
   .section-heading {
-    font-size: 1.8rem;
+    font-size: 1.2rem;
   }
 
   .linear-bg .text-container {
@@ -275,11 +275,15 @@ section {
   }
 
   .banner {
-    padding: 0rem;
-    min-height: 360px;
+    padding: 20px 0rem;
+    min-height: 200px;
   }
   .banner-text {
-    width: 85%;
+    width: 100%;
+    gap: 0.5rem;
+    & p {
+      font-size: 12.5px;
+    }
   }
 }
 
@@ -296,21 +300,20 @@ section {
   }
 }
 
+nav .logout {
+  color: var(--color-theme-error);
+  padding: 4px 16px;
+
+  &:hover {
+    background-color: #f5f5f5;
+  }
+}
 .dropdown-menu {
   padding: 0;
   overflow: hidden;
 
   &.show {
     margin-top: 15px !important;
-  }
-
-  & .logout {
-    color: var(--color-theme-error);
-    padding: 4px 16px;
-
-    &:hover {
-      background-color: #f5f5f5;
-    }
   }
 
   .dropdown-item {
@@ -343,17 +346,21 @@ section {
 }
 
 @media screen and (max-width: 768px) {
+  nav .logout {
+    padding: 0px;
+  }
   .text-xl {
     font-size: 1.6rem;
   }
   .section-heading {
-    font-size: 1.5rem;
+    font-size: 1.2rem;
   }
   .section-heading.line {
     padding-left: 20px;
   }
   .section-heading .text-sm {
     margin: 0 !important;
+    font-size: 13px;
   }
 
   .styled-img-container {
@@ -361,7 +368,9 @@ section {
   }
 
   .styled-img-container {
-    height: 440px;
+    height: 400px;
+    padding: 0px;
+    margin-top: 30px;
   }
 
   .styled-img-container .styled-img {
@@ -373,14 +382,16 @@ section {
     height: 372px;
   }
   .styled-img-container .styled-img:nth-of-type(1) {
-    width: 120px;
+    width: 100px;
     height: 240px;
     right: 190px;
+    left: 0;
   }
   .styled-img-container .styled-img:nth-of-type(3) {
-    width: 120px;
+    width: 100px;
     height: 120px;
     right: 190px;
-    top: 286px;
+    top: 256px;
+    left: 0;
   }
 }
