--- a/src/pages/about/about.css
+++ b/src/pages/about/about.css
@@ -98,6 +98,7 @@
     & .team-container {
       gap: 1rem;
       margin-top: 2rem;
+      flex-direction: column;
     }
     & .team-item {
       margin: 0;
