--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -53,6 +53,7 @@
   overflow: hidden;
   flex: 1;
   margin: 15px; */
+  min-height: 360px;
 }
 
 .card-image {
@@ -71,7 +72,7 @@
 }
 
 .card-description {
-  font-size: 16px;
+  font-size: 14px;
   color: #666;
 }
 
@@ -269,7 +270,7 @@
   section#searchTempleToDonate {
     margin-top: 0px !important;
     & > h2 {
-      font-size: 30px;
+      font-size: 24px;
     }
   }
   .review-container {
@@ -284,6 +285,13 @@
   .review {
     width: 100%;
     flex: auto;
+  }
+  .listing {
+    min-width: 200px;
+    width: 100% !important;
+    max-width: 100% !important;
+    padding: 0px;
+    margin: 0px;
   }
   .hero-section {
     padding: 2rem 1rem;
@@ -341,7 +349,7 @@
 
   .search-section .box {
     height: 95%;
-    top: 65px;
+    top: 40px;
     border-radius: 22px;
   }
 
@@ -350,7 +358,7 @@
     flex: none !important;
   }
   .card-container {
-    /* flex-direction: column; */
+    flex-direction: column;
   }
   .search-section .listing-container {
     padding: 0 6px;
@@ -367,6 +375,9 @@
     margin: 0;
     padding: 0;
   }
+  .capsuleContainer > .capsule {
+    max-width: 100%;
+  }
 }
 
 .capsuleContainer {
@@ -379,7 +390,7 @@
   display: flex;
   /* gap: 10px; */
   border: 1px solid black;
-  padding: 10px;
+  padding: 4px 10px;
   border-radius: 20px;
   position: relative;
   z-index: 2;
@@ -418,7 +429,7 @@
 }
 
 @media screen and (max-width: 768px) {
-  .capsuleContainer > .capsule {
-    max-width: 100%;
+  .card-content {
+    padding: 10px;
   }
 }
