--- a/src/pages/temples/temples.css
+++ b/src/pages/temples/temples.css
@@ -3,19 +3,21 @@
   & .form-select {
     font-size: 14px !important;
   }
+
+  & form {
+    transition: 0.3s all !important;
+  }
 }
 .sort-buttons .btn {
   flex: 1;
 }
 
-
-.trending-temples > div{
+.trending-temples > div {
   flex-shrink: 0;
   width: 260px;
-
 }
 
-.loading-container{
+.loading-container {
   height: 200px;
   max-width: 100%;
   width: 200px;
@@ -23,5 +25,4 @@
   align-items: center;
   justify-content: center;
   margin: auto;
-
 }
