changes in contact info and other minor issues

--- a/src/global.css
+++ b/src/global.css
@@ -362,7 +362,7 @@ nav .logout {
     margin: 0 !important;
     font-size: 13px;
   }
-
+  /* 
   .styled-img-container {
     width: 100%;
   }
@@ -393,5 +393,5 @@ nav .logout {
     right: 190px;
     top: 256px;
     left: 0;
-  }
+  } */
 }
