--- a/src/components/sectionImgWithTextDesc/sectionImgWithText.css
+++ b/src/components/sectionImgWithTextDesc/sectionImgWithText.css
@@ -1,39 +1,83 @@
+.styled-img-container {
+  width: 50%;
+  position: relative;
+  height: 600px;
+  padding: 2rem;
+}
+.styled-img-container .styled-img {
+  position: absolute;
+  border-radius: 30px;
+  overflow: hidden;
+}
+.styled-img-container .styled-img:nth-of-type(1) {
+  width: 280px;
+  height: 290px;
+  right: 300px;
+}
+.styled-img-container .styled-img:nth-of-type(2) {
+  width: 280px;
+  height: 520px;
+  right: 0;
+}
+.styled-img-container .styled-img:nth-of-type(3) {
+  width: 360px;
+  height: 260px;
+  right: 300px;
+  top: 340px;
+}
+.styled-img-container .styled-img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 
+.styled-img-container + div {
+  flex: 1;
+}
 
-.styled-img-container{
-    width: 50%;
-    position: relative;
-    height: 600px;
-    padding: 2rem;
-}
-.styled-img-container .styled-img{
-    position: absolute;
-    border-radius: 30px;
-    overflow: hidden;
-}
-.styled-img-container .styled-img:nth-of-type(1){
-   width: 280px;
-   height: 290px;
-   right: 300px;
-   
-}
-.styled-img-container .styled-img:nth-of-type(2){
-    width: 280px;
-    height: 520px;
+@media screen and (max-width: 768px) {
+  .styled-img-container {
+    width: 100%;
+    padding: 0px;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 10px;
+    gap: 6px;
+  }
+  .styled-img-container .styled-img {
+    position: static;
+    border-radius: 4px !important;
+
+    width: 100% !important;
+
+    height: 150px !important;
+    & img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
+
+  /* .styled-img-container {
+    width: 100%;
+    height: 440px;
+  }
+
+  .styled-img-container .styled-img:nth-of-type(1) {
+    width: 160px;
+    height: 190px;
+    right: 200px;
+  }
+  .styled-img-container .styled-img:nth-of-type(2) {
+    width: 180px;
+    height: 320px;
     right: 0;
-}
-.styled-img-container .styled-img:nth-of-type(3){
-    width: 360px;
-    height: 260px;
-    right: 300px;
-    top:340px
-}
-.styled-img-container .styled-img img{
-   width: 100%;
-   height: 100%;
-   object-fit: cover;
-}
-
-.styled-img-container + div{
-    flex: 1;
+  }
+  .styled-img-container .styled-img:nth-of-type(3) {
+    width: 160px;
+    height: 160px;
+    right: 200px;
+    top: 240px;
+  } */
 }
