--- a/src/global.css
+++ b/src/global.css
@@ -254,6 +254,21 @@ section {
   align-items: center;
 }
 
+@media screen and (max-width: 1350px) {
+  .avatar-wrapper ~ span {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 1100px) {
+  .contact-main .left-container {
+    padding: 3rem !important;
+  }
+  .section-heading {
+    font-size: 1.5rem;
+  }
+}
+
 @media screen and (max-width: 768px) {
   .text-heading {
     font-size: 1.9rem;
