--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -141,90 +141,6 @@
   color: var(--color-grey-light-2);
 }
 
-.listing-container {
-  display: flex;
-  justify-content: flex-start;
-  /* align-items: center; */
-  width: 100%;
-  margin-top: 2rem;
-  flex-wrap: wrap;
-
-  &.center {
-    justify-content: center;
-  }
-}
-
-.listing {
-  padding: 6px;
-  border-radius: 8px;
-  transition: 0.3s all;
-  display: flex;
-  flex-direction: column;
-  align-items: start;
-  margin: 15px 10px;
-  flex: 1;
-  /* padding: 1rem; */
-  min-width: 330px;
-  max-width: 400px;
-  border: 1px solid transparent;
-
-  &:hover {
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-    border-color: #eee;
-  }
-
-  &.admin {
-    box-shadow: rgba(17, 17, 26, 0.05) 0px 1px 0px,
-      rgba(17, 17, 26, 0.1) 0px 0px 8px;
-    padding: 10px;
-    border-radius: 8px;
-    & table {
-      /* background-color: #eee; */
-      & tr:not(last-of-type) {
-        border-bottom: 1px solid #ccc;
-        & td {
-          font-weight: 500;
-        }
-      }
-    }
-  }
-}
-& td button {
-  margin-right: 20px;
-  transition: 0.3s all !important;
-
-  &:hover {
-    scale: 1.3;
-  }
-  & i {
-    font-size: 20px;
-    color: var(--color-theme-primary);
-  }
-}
-.listing-img-wrapper {
-  width: 100%;
-  border: 1px solid #ccc;
-  box-shadow: var(--shadow-dark);
-  height: 260px;
-  overflow: hidden;
-  border-radius: 8px;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
-    rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
-}
-.listing-img-wrapper img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  border-radius: 4px;
-}
-.listing-content {
-  display: flex;
-  flex-direction: column;
-  gap: 0.2rem;
-  margin-top: 0.6rem;
-  width: 100%;
-}
-
 .search-section {
   position: relative;
 }
@@ -266,6 +182,34 @@
   }
 }
 
+@media screen and (max-width: 1250px) {
+  .search-section .box {
+    height: 750px;
+  }
+
+  .review-container {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+  .review-heading {
+    order: -1;
+  }
+
+  .review-container {
+    margin: 0;
+  }
+  .review-heading {
+    margin: 0;
+    padding: 0;
+  }
+}
+@media screen and (max-width: 950px) {
+  .search-section .box {
+    height: 1051px;
+    top: 9%;
+  }
+}
 @media screen and (max-width: 768px) {
   .search-section .search-bar-wrapper {
     max-width: 93%;
@@ -276,11 +220,7 @@
       font-size: 24px;
     }
   }
-  .review-container {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-  }
+
   .tab-btns-container {
     max-width: fit-content;
   }
@@ -349,17 +289,6 @@
     padding: 0 6px;
   }
 
-  .review-heading {
-    order: -1;
-  }
-
-  .review-container {
-    margin: 0;
-  }
-  .review-heading {
-    margin: 0;
-    padding: 0;
-  }
   .capsuleContainer > .capsule {
     max-width: 100%;
   }
