--- a/src/pages/checkout/checkout.css
+++ b/src/pages/checkout/checkout.css
@@ -76,7 +76,148 @@
   padding-right: 35px;
 }
 
+.selected-temple {
+  background: #eee;
+  padding: 10px;
+  border-radius: 8px;
+  display: flex;
+  flex-wrap: wrap;
+  & .img-wrapper {
+    flex-shrink: 0;
+    border-radius: 8px;
+    overflow: hidden;
+    aspect-ratio: 1 / 1;
+    width: 50%;
+    height: 200px;
+    & img {
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+    }
+  }
+  & .content {
+    width: 50%;
+    padding-left: 8px; /* Equivalent to 'px-2' */
+    & h3 {
+      font-size: 20px;
+      margin-top: 8px; /* Equivalent to 'mt-2' */
+    }
+    & p {
+      font-size: 14px;
+      margin: 8px 0; /* Equivalent to 'my-2' */
+    }
+  }
+}
+
+.about {
+  background: #f5f5f5;
+  padding: 10px;
+  border-radius: 8px;
+  margin-bottom: 16px;
+
+  .container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+
+  .img-wrapper {
+    border-radius: 8px;
+    overflow: hidden;
+    aspect-ratio: 1 / 1;
+    width: 160px;
+    height: 100%;
+
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+    }
+  }
+
+  .content {
+    flex: 1;
+    padding: 16px;
+
+    p {
+      margin-top: 8px;
+      /* font-weight: bold; */
+      &:nth-of-type(2) {
+        font-weight: bold;
+      }
+    }
+  }
+
+  .support {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    select {
+      margin-right: 10px;
+      width: 160px;
+      background-color: #fff;
+      font-size: 13.5px;
+    }
+
+    input {
+      font-size: 13.5px;
+      width: 100%;
+      padding-right: 20px;
+    }
+
+    .custom-percentage {
+      position: relative;
+      display: inline-block;
+      width: 160px;
+
+      span {
+        position: absolute;
+        right: 10px;
+        top: 50%;
+        transform: translateY(-50%);
+      }
+    }
+  }
+
+  .contribution {
+    margin-top: 16px;
+    font-weight: bold;
+
+    .checkbox-container {
+      display: flex;
+      align-items: center;
+      gap: 16px;
+
+      .form-check {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        .form-check-input {
+          margin-right: 8px;
+        }
+
+        .form-check-label {
+          font-size: 13.5px;
+          color: darkgrey;
+        }
+      }
+    }
+  }
+}
+.currency-select .form-select {
+  font-size: 14px !important;
+}
 @media (max-width: 1400px) {
+  .about {
+    margin-top: 20px;
+    .container {
+      flex-direction: column;
+      padding: 0;
+    }
+  }
 }
 
 @media (max-width: 768px) {
@@ -89,5 +230,15 @@
   }
   .amount {
     font-size: 12px;
+  }
+
+  .donate-btn {
+    position: fixed;
+    bottom: 0;
+    left: 0px;
+    right: 0px;
+    width: auto !important;
+    margin: auto;
+    font-size: 16px;
   }
 }
