--- a/src/pages/temple/event.css
+++ b/src/pages/temple/event.css
@@ -30,8 +30,20 @@
 
 .event-images img {
   max-width: 100%;
-  height: auto;
-  margin: 10px;
+  flex: 1;
+  height: 100%;
+  margin: 4px;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+@media screen and (max-width: 1400px) {
+  .event-images {
+    width: 100%;
+  }
+  .col-md-7 .d-flex {
+    width: 100%;
+    overflow-x: scroll;
+    overflow-y: hidden;
+  }
 }
