--- a/src/pages/temple/temple.css
+++ b/src/pages/temple/temple.css
@@ -105,3 +105,75 @@ label {
     max-width: 100% !important;
   }
 }
+
+.bghjHX {
+  margin: 0 !important;
+}
+
+.about-container {
+  & .img-wrapper {
+    height: 300px;
+    aspect-ratio: 1/1;
+    border-radius: 4px;
+    overflow: hidden;
+    margin: 0px 4px;
+    padding: 0px;
+
+    & img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
+}
+
+.all-images-container {
+  display: flex;
+  overflow-x: auto;
+  white-space: nowrap;
+  width: 1000px;
+
+  & .img-wrapper {
+    width: 300px;
+    aspect-ratio: 1/1;
+    border-radius: 4px;
+    margin: 4px;
+    padding: 0px;
+    flex: 1;
+
+    & img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
+}
+
+@media screen and (max-width: 1500px) {
+  .all-images-container {
+    width: 900px;
+  }
+}
+
+@media screen and (max-width: 1400px) {
+  .all-images-container {
+    width: 700px;
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  .all-images-container {
+    width: 100%;
+    flex-wrap: wrap;
+
+    & .img-wrapper {
+      width: 100px !important;
+    }
+  }
+  .img-wrapper {
+    width: 100%;
+  }
+  .about-container > div > .img-wrapper {
+    order: 0 !important ;
+  }
+}
