--- a/src/components/modals/signupmodel.css
+++ b/src/components/modals/signupmodel.css
@@ -10,5 +10,17 @@
     background-color: #f5f5f5;
     outline: none;
     border: none;
+    
 
+}
+
+.password-eye-icon{
+   cursor: pointer;
+
+
+
+}
+
+.password-form-control input{
+    /* border-right: none; */
 }
