fixes for Add Temple when not logged in

--- a/src/global.css
+++ b/src/global.css
@@ -420,3 +420,30 @@ nav .logout {
   margin-left: 2px;
   font-weight: 500;
 }
+.no_user {
+  filter: blur(5px);
+}
+.warning-bg {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.75);
+  z-index: 2;
+  left: 0;
+  right: 0;
+}
+.warning-modal {
+  background-color: #f8d7da;
+  color: #721c24;
+  border-color: #f5c6cb;
+  padding: 20px;
+  border-radius: 5px;
+  margin-top: 20px;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 1.5;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
