--- a/src/components/layout/layout.css
+++ b/src/components/layout/layout.css
@@ -272,6 +272,11 @@ main {
 
   /* mobile nav */
 
+  nav .nav-left,
+  nav .nav-right {
+    gap: 1rem;
+  }
+
   .nav-left .nav-item,
   .nav-right .nav-item {
     display: none;
