various issues fixed

--- a/src/components/listingCard/listing-card.css
+++ b/src/components/listingCard/listing-card.css
@@ -151,4 +151,8 @@
   .carousel-item-spacing {
     margin: 20px !important; /* Adjust the margin for mobile view */
   }
+
+  .listings {
+    z-index: -1;
+  }
 }
